--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -7,6 +7,8 @@ ENV INITSYSTEM on
 
 RUN echo "tmpfs   /data/cache    tmpfs  rw,size=200M,nr_inodes=5k,noexec,nodev,nosuid,uid=648,gid=648,mode=1700   0  0" >> /etc/fstab
 
+RUN mkdir -p /data/cache
+
 # copy current directory into /app
 COPY . ./
 
