--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -5,9 +5,7 @@ WORKDIR /usr/src/app
 # Enable systemd
 ENV INITSYSTEM on
 
-RUN echo "tmpfs   /data/cache    tmpfs  rw,size=200M,nr_inodes=5k,noexec,nodev,nosuid,uid=648,gid=648,mode=1700   0  0" >> /etc/fstab
-
-RUN mkdir -p /data/cache
+RUN echo "tmpfs   /cache    tmpfs  rw,size=200M  0  0" >> /etc/fstab
 
 # copy current directory into /app
 COPY . ./
